--- a/GrabCab_Admin_Documentation/index.html
+++ b/GrabCab_Admin_Documentation/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>GrabCab Admin Documentation</title>
+<title>Logix Admin Documentation</title>
 <link rel="stylesheet" href="assets/css/styles.css" type="text/css" />
 
 <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
@@ -17,7 +17,7 @@
 		<aside id="sidebar" class="column-left">
 
 			<header>
-				<h1><a style="font-size: 22px" href="#">GrabCab Admin</a></h1>
+				<h1><a style="font-size: 22px" href="#">Logix Admin</a></h1>
 				<h2>Documentation by <b>Exicube App Solutions.</b> v4.0 </h2>
 			</header>
 
@@ -36,7 +36,7 @@
 		</aside>
 	    <section id="content">
 			<article id="topMain">
-				<h2>1. Introduction to GrabCab Admin Portal</h2>
+				<h2>1. Introduction to Logix Admin Portal</h2>
 				<p>This project is a TAXI Booking App Admin Portal. We have build this Portal using React.js for Web</p>
 				<p class="secondPara">Technologies Used</p> 
 				<ol class="expanded" >
